--- a/3_Implementation/Makefile
+++ b/3_Implementation/Makefile
@@ -1,28 +1,67 @@
-#include <Activity1.h>
-#include <Activity2.h>
-#include <Activity3.h>
+PROJ_NAME = GLOW
 
-int main(void)
-{
-    uint16_t temp;
+BUILD_DIR = Build
 
-    while(1)
-    {
-        if(Activity1_LED()==1)
-        {
+# All Source code files
+SRC = src/header1.c\
+src/header2.c\
+src/header3.c\
+SeatHeat.c
 
-            TurnLED_ON();
-            temp=Activity2_GetADC();
-            Activity3_PWM(temp);
+# All header file paths
+INC = -I
 
 
-        }
-        else
-        {
-            TurnLED_OFF();
-		    _delay_ms(200);
-        }
+OBJCOPY=avr-objcopy.exe
 
-    }
-    return 0;
-}
+AVRDUDE:=avrdude
+HFLAGS=-j .text -j .data -O ihex
+
+
+# Find out the OS and configure the variables accordingly
+ifdef OS	# All configurations for Windwos OS
+# Correct the path based on OS
+   FixPath = $(subst /,\,$1)
+# Name of the compiler used
+   CC = avr-gcc.exe
+# Name of the elf to hex file converter used
+   AVR_OBJ_CPY = avr-objcopy.exe
+else #All configurations for Linux OS
+   ifeq ($(shell uname), Linux)
+# Correct the path based on OS
+      FixPath = $1				
+# Name of the compiler used
+	  CC = avr-gcc
+# Name of the elf to hex file converter used
+	  AVR_OBJ_CPY = avr-objcopy
+   endif
+endif
+
+# Command to make to consider these names as targets and not as file names in folder
+.PHONY:all analysis clean doc
+
+all:$(BUILD_DIR)
+# Compile the code and generate the ELF file
+	$(CC) -g -Wall -Os -mmcu=atmega328 -DF_CPU16000000UL $(INC) $(SRC) -o $(call FixPath,$(BUILD_DIR)/$(PROJ_NAME).elf)
+
+hex: $(call FixPath,$(BUILD_DIR)/$(PROJ_NAME).elf)
+	#create hex file
+	$(OBJCOPY) $(HFLAGS) $< $(call FixPath,$(BUILD_DIR)/$(PROJ_NAME).hex)
+
+
+$(BUILD_DIR):
+# Create directory to store the built files
+	mkdir $(BUILD_DIR)
+
+analysis: $(SRC)
+# Analyse the code using Cppcheck command line utility
+	cppcheck --enable=all $^
+
+doc:
+# Build the code code documentation using Doxygen command line utility
+	make -C documentation
+
+clean:
+# Remove all the build files and generated document files
+	rm -rf $(call FixPath,$(BUILD_DIR)/*)
+	make -C documentation clea
